# DemoAgent

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: agent_plan.md  architecture.md
src/agent_software_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/software_factory/: __init__.py  cli.py  client.py  signals.py  state.py  workflow.py
src/software_factory/executors/: __init__.py  dispatcher.py  implementation.py  planning.py  verification.py
tests/: test_placeholder.py
